# radaria

./: CMakeLists.txt  camera_capture.cpp  camera_capture.cpp.old.cpp  camera_capture_v2.cpp  cv_camera_capture.cpp  dmesg  module used  ncnn_inference.cpp  ncnn_inference.h  save_jpeg.cpp  save_jpeg.h  test.cpp
code/yolo11n_ncnn_model/: metadata.yaml
